--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -1,14 +1,12 @@
 <div class="ui dimmer" [class.active]="loading">
     <div class="ui loader"></div>
 </div>
-
 <div class="jumbotron bg-white text-center">
   <h1 class="display-4">Covid-19 Cases By Country</h1>
-  <hr>
 
   <div class="mx-auto">
-    <div class="form-goup col-lg-5 mx-auto">
-      <label for="c">Select Country</label>
+    <div class="form-select col-lg-5 mx-auto">
+      <option selected>Select the Country</option>
       <select id ="c"  class="form-control" name="" #input (change)="updateValues(input.value)">
         <option value="{{country}}" *ngFor="let country of countries">{{country}}</option>
       </select>
@@ -19,12 +17,30 @@
     [totalDeaths] = "totalDeaths"
   ></app-dashboard-card>
 
+  <div class="ui form">
+    <div class="inline fields">
+      <label for="caseType">Select Case Type:</label>
+      <div class="field">
+        <div class="ui radio checkbox">
+          <input type="radio" id='a' #a (click)="updateChart()" value ='a' name="caseType" tabindex="0" class="hidden">
+          <label for='a'>All Confirmed</label>
+        </div>
+      </div>
+      <div class="field">
+        <div class="ui radio checkbox">
+          <input type="radio" id='r' #r (click) = "updateChartRecent()" value ='r' name="caseType" tabindex="0" class="hidden">
+          <label for='r'>Recent 30 days Confirmed</label>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col col-md-6">
-      <google-chart [type]= "linechart.chartType" [options] = "linechart.options" style="width: 100%" [height] = "linechart.height" [data]="linechartDatatable"></google-chart>
+      <google-chart *ngIf="linechartDatatable.length !== 0" [type]= "linechart.chartType" [options] = "linechart.options" style="width: 100%" [height] = "linechart.height" [data]="linechartDatatable"></google-chart>
     </div>
     <div class="col-12 col-md-6">
-      <google-chart [type]="columnchart.chartType" [options] = "columnchart.options" style="width: 100%" [height] = "columnchart.height" [data]="columnchartDatatable"></google-chart>
+      <google-chart *ngIf ="columnchartDatatable.length !== 0" [type]="columnchart.chartType" [options] = "columnchart.options" style="width: 100%" [height] = "columnchart.height" [data]="columnchartDatatable"></google-chart>
     </div>
   </div>
 </div>
